feat(repository-mongo): add application name to Subscription